Fix WebVR support for devices without Async Reprojection.

Adds a java Surface to render into for devices that don't support async reprojection.

BUG=674233

Review-Url: https://codereview.chromium.org/2616583002
Cr-Commit-Position: refs/heads/master@{#441443}

Former-commit-id: 8e41e5abe95bb566b24c84a226a45383abfd2417